fix abstract spacing and navigation

--- a/_sass/_basic.scss
+++ b/_sass/_basic.scss
@@ -156,7 +156,7 @@ h6, .h6 {
 	}
 }
 
-p, ul, ol {
+p, ul, ol, summary {
 	margin-top: 15px;
 	font-size: $p-small;
 	font-weight: $p-weight;
