--- a/_sass/_includes/_content.scss
+++ b/_sass/_includes/_content.scss
@@ -34,7 +34,7 @@
 
 .single {
 
-	h1, h2, h3, h4, h5, h6, p, ul, ol {
+	h1, h2, h3, h4, h5, h6, p, ul, ol, summary {
 		margin-left: auto;
 		margin-right: auto;
 		padding-left: 30px;
